crates/reinhardt-pages/tests/ui/client_form/fail/server_fn_submit_response_deserialize.rs
use reinhardt_pages::ClientForm;
use serde::{Deserialize, Serialize};

#[derive(Clone, PartialEq, Serialize, Deserialize, ClientForm)]
#[client_form(server_fn = submit_settings)]
pub struct SettingsRequest {
	pub name: String,
}

#[derive(Clone, Debug, PartialEq, Serialize)]
pub struct SettingsResponse {
	name: String,
}

mod submit_settings {
	// Mirrors the marker module shape generated by #[server_fn].
	#[allow(non_camel_case_types)]
	pub struct marker;

	impl reinhardt_pages::server_fn::ServerFnMetadata for marker {
		const PATH: &'static str = "/api/server_fn/submit_settings";
		const NAME: &'static str = "submit_settings";
		const IS_JSON_CODEC: bool = true;
	}

	impl reinhardt_pages::server_fn::ServerFnRequestMetadata for marker {
		type Request = crate::SettingsRequest;
	}

	impl reinhardt_pages::server_fn::ServerFnResponseMetadata for marker {
		type Response = crate::SettingsResponse;
		type Error = reinhardt_pages::server_fn::ServerFnError;
	}
}

fn main() {}
