crates/reinhardt-pages/tests/ui/client_form/fail/server_fn_submit_response_deserialize.stderr
error[E0277]: the trait bound `SettingsResponse: serde::de::DeserializeOwned` is not satisfied
  --> tests/ui/client_form/fail/server_fn_submit_response_deserialize.rs:4:52
   |
 4 | #[derive(Clone, PartialEq, Serialize, Deserialize, ClientForm)]
   |                                                    ^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `for<'de> Deserialize<'de>` is not implemented for `SettingsResponse`
  --> tests/ui/client_form/fail/server_fn_submit_response_deserialize.rs:11:1
   |
11 | pub struct SettingsResponse {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: the following other types implement trait `Deserialize<'de>`:
             `&'a [u8]` implements `Deserialize<'de>`
             `&'a serde_json::raw::RawValue` implements `Deserialize<'de>`
             `&'a std::path::Path` implements `Deserialize<'de>`
             `&'a str` implements `Deserialize<'de>`
             `()` implements `Deserialize<'de>`
             `(T,)` implements `Deserialize<'de>`
             `(T0, T1)` implements `Deserialize<'de>`
             `(T0, T1, T2)` implements `Deserialize<'de>`
           and $N others
   = note: required for `SettingsResponse` to implement `DeserializeOwned`
   = note: this error originates in the derive macro `ClientForm` (in Nightly builds, run with -Z macro-backtrace for more info)
